--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="controls">
+  <button mat-raised-button color="primary" (click)="openInput()">
+    Import from Text
+  </button>
   <button mat-raised-button color="primary" (click)="saveToFile()">
     Save to File
-  </button>
-  <button mat-raised-button color="accent" (click)="openInput()">
-    Open Input
   </button>
 </div>
 
